Fixed height of the quick game cards on mobile and added in text to explain page

--- a/src/scss/gameComponents/createGameScreen.scss
+++ b/src/scss/gameComponents/createGameScreen.scss
@@ -79,8 +79,8 @@
 
 .quickGameCard{
     color: black;
-    height: 10rem;
-    // width: 10rem;
+    height: 9rem;
+    width: 7.5rem;
 }
 
 .quickGameCardBodyText{
